k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorang-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "52m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://memorang.tickertom.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - memorang.tickertom.com
        - memorang-api.tickertom.com
        - memorang-api-temporal.tickertom.com
      secretName: memorang-tls
  rules:
    - host: memorang.tickertom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memorang-frontend-svc-prod
                port:
                  number: 80
    - host: memorang-api.tickertom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memorang-backend-svc-prod
                port:
                  number: 80
    - host: memorang-api-temporal.tickertom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memorang-temporal-ui-svc-prod
                port:
                  number: 80
